--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -1,8 +1,37 @@
+/*  Responsive Design
+    1440px ~ 100vw => 14.4px ~ 1vw
+
+
+    Theme Color
+    const LightTheme={
+  lightText:"hsl(200, 15%, 8%)",
+  lightInput:"hsl(0, 0%, 52%)",
+  lightBackground:"hsl(0, 0%, 98%)",
+  lightElements:"hsl(0, 0%, 100%)"
+}
+
+  const DarkTheme={
+  darkText:"hsl(0, 0%, 100%)",
+  darkInput:"hsl(0, 0%, 52%)",
+  darkBackground:"hsl(207, 26%, 17%)",
+  darkElements:"hsl(209, 23%, 22%)" // 
+}
+
+
+  */
+
+*{
+  box-sizing: border-box;
+  /* background-color: hsl(0, 0%, 98%);
+  color:hsl(200, 15%, 8%); */
+}
+
 @import url(https://fonts.google.com/specimen/Rubik?query=Rubik#standard-styles);
 body{
   /*  Change 16px for detail page */
   font-size: 14px; 
   font-family:Rubik;
+  /* box-sizing: border-box; */
 }
 .header{
   display: flex;
@@ -10,10 +39,13 @@ body{
   height: 13vh;
   align-items: center;
   box-shadow: 2px 1px  1px #888888;
+  /* background-color: hsl(0, 0%, 100%); */
 } 
+/*  Mobile version */
+
 
 .header h2{
-  width: 20vw;
+  width: 480px;
   margin-left: 5vw; 
 }
 .toggleTheme{
@@ -28,44 +60,231 @@ body{
   width: 15px;
   margin-right: 7px;
 }
-.search-filter-wrapper{
-  margin:50px 0;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  height: 50px;
-}
-.search{
-  /* box-shadow: 1px 3px  2px #888888; */
-  border-style: none;
-}
-input[type=text]{
-  background-image: url("./assets/search-icon.png");
-  background-repeat: no-repeat;
-  background-size: 20px 20px;
-  height: 45px;
-  width: 400px;
-  background-position: 20px 13px;
-  text-indent: 60px; 
-}
-/* .filter{
-  
 
-} */
-.filter select{
-  height: 45px;
-  width:200px;
-  padding: 10px;
+
+@media only screen and (min-width: 370px){
+
+  .search-filter-wrapper{
+    flex-direction: column;
+    margin:50px 5vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 150px;
+  }
+  input[type=text]{
+    background-image: url("./assets/search-icon.png");
+    background-repeat: no-repeat;
+    background-size: 20px 20px;
+    height: 45px;
+    width: 90vw;
+    background-position: 20px 13px;
+    text-indent: 60px; 
+  }
+  .filter{
+    /* margin-top: 20px; */
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;  
+  
+  }
+  .filter select{
+    height: 45px;
+    width:200px;
+    padding: 10px;
+    
+  }
+  .filter select option{
+    border-style: none;
+    /* appearance: none; */
+  }
+
+  .card-detail-wrapper{
+    display: flex;
+    flex-direction: column;
+    font-size: 16px; 
+    /* background-color: lightgoldenrodyellow; */
+    margin:0 5vw;
+  }
+  .card-detail-wrapper img{
+    width: 90vw;
+  }
+  .detail-wrapper{
+
+  }
+  .detail-col{
+    display: flex;
+    flex-direction: column;
+    width: 87vw;
+  }
+  .detail-col1{
+    display: flex;
+    flex-direction: column;
+    width: 87vw;
+    margin-bottom: 30px;
+  }
+  /* .detail-col2{
+      
+  } */
+  .detail-row{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: 25px;
+  }
+  .detail-row span{
+    margin: 2px;
+  }
+  .detail-sub-heading{
+    margin-right: 5px;
+  }
+  
+  
+  .detail-clickable-row{
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+    margin-top: 25px;
+  }
+  .detail-clickable-row h4{
+    justify-self: flex-start;
+    width: 150px;
+  }
+  .border-country-list{
+  
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    flex-wrap: wrap;
+  
+  }
+  .border-country-list button{
+    background: none;
+    border-style: none;
+    box-shadow: 2px 3px 5px #888888;
+    margin:10px;
+    height: 25px;
+    width: 80px;
+  }
+  
 }
-/* .filter select option{
- 
-} */
+
+@media only screen and (min-width:700px){
+  .search-filter-wrapper{
+    margin:50px 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    height: 50px;
+
+  }
+  .search{
+    /* box-shadow: 1px 3px  2px #888888; */
+    border-style: none;
+  }
+  input[type=text]{
+    background-image: url("./assets/search-icon.png");
+    background-repeat: no-repeat;
+    background-size: 20px 20px;
+    height: 45px;
+    width: 400px;
+    background-position: 20px 13px;
+    text-indent: 60px; 
+  }
+  /* .filter{
+    
+  
+  } */
+  .filter select{
+    height: 45px;
+    width:200px;
+    padding: 10px;
+    
+  }
+  .filter select option{
+    border-style: none;
+    /* appearance: none; */
+  }
+
+  /*  Detail Page */
+
+  .card-detail-wrapper{
+    display: flex;
+    flex-direction: row;
+    font-size: 16px; 
+    /* background-color: lightgoldenrodyellow; */
+    margin:0 5vw;
+  }
+  .card-detail-wrapper img{
+    width: 450px;
+    height: 350px;
+  }
+  .detail-wrapper{
+    margin-left:8vw;
+  }
+  .detail-col{
+    display: flex;
+    flex-direction: row;
+    width: 600px;
+  }
+  .detail-col1{
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    /* align-items: center; */
+  }
+  /* .detail-col2{
+      
+  } */
+  .detail-row{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: 25px;
+  }
+  .detail-row span{
+    margin: 2px;
+  }
+  .detail-sub-heading{
+    margin-right: 5px;
+  }
+  
+  
+  .detail-clickable-row{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 50px;
+  }
+  .detail-clickable-row h4{
+    display: inline;
+    width: 150px;
+  }
+  .border-country-list{
+  
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    flex-wrap: wrap;
+  
+  }
+  .border-country-list button{
+    background: none;
+    border-style: none;
+    box-shadow: 2px 3px 5px #888888;
+    margin:10px;
+    height: 25px;
+    width: 80px;
+  }
+}
+
 
 .card-list{
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: space-evenly;
 
 }
 .card{
@@ -73,7 +292,7 @@ input[type=text]{
   height:330px;
   box-shadow: 1px 4px 3px #888888;
   /* margin-top: 30px; */
-  margin: 20px 50px;
+  margin: 20px 20px;
   /* flex: 1; */
 
 }
@@ -114,72 +333,4 @@ input[type=text]{
   width:50px;
   height: 17px;
   
-}
-.card-detail-wrapper{
-  display: flex;
-  flex-direction: row;
-  
-  /* background-color: lightgoldenrodyellow; */
-  margin:0 5vw;
-}
-.card-detail-wrapper img{
-  width: 450px;
-  height: 350px;
-}
-.detail-wrapper{
-  margin-left:8vw;
-}
-.detail-col{
-  display: flex;
-  flex-direction: row;
-  width: 600px;
-}
-.detail-col1{
-  display: flex;
-  flex-direction: column;
-  width: 300px;
-  /* align-items: center; */
-}
-/* .detail-col2{
-    
-} */
-.detail-row{
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  height: 25px;
-}
-.detail-row span{
-  margin: 2px;
-}
-.detail-sub-heading{
-  margin-right: 5px;
-}
-
-
-.detail-clickable-row{
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  margin-top: 50px;
-}
-.detail-clickable-row h4{
-  display: inline;
-  width: 150px;
-}
-.border-country-list{
-
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  flex-wrap: wrap;
-
-}
-.border-country-list button{
-  background: none;
-  border-style: none;
-  box-shadow: 2px 3px 5px #888888;
-  margin:10px;
-  height: 25px;
-  width: 80px;
 }
