--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -295,11 +295,12 @@ body{
 
 }
 .card{
+  box-sizing: border-box;
   width: 250px;
   height:330px;
   box-shadow: 1px 4px 3px #888888;
-  /* margin-top: 30px; */
   margin: 20px 20px;
+
   /* flex: 1; */
 
 }
